--- a/Servo/.project
+++ b/Servo/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>Passive Buzzer</name>
+	<name>Servo</name>
 	<comment></comment>
 	<projects>
 	</projects>
